build frontend in automated tests and goreleaser

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,15 +5,19 @@ before:
     # You may remove this if you don't use go modules.
     - go mod tidy
     # you may remove this if you don't need go generate
-    #- go generate ./...
+    - go generate ./...
 builds:
-  - env:
+  -
+    main: ./src/
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
       - windows
       - darwin
-    main: ./src/
+    ignore:
+      - goos: windows
+        goarch: 386
 
 archives:
   - format: tar.gz
